--- a/강의자료/gemini_cli.html
+++ b/강의자료/gemini_cli.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Gemini CLI 설치 및 활용 가이드 (통합본)</title>
-<link href="css/tailwind.css" rel="stylesheet"/>
-<link href="css/fontawesome.css" rel="stylesheet"/>
+<link href="css/tailwind.min.css" rel="stylesheet"/>
+<link href="css/fontawesome.min.css" rel="stylesheet"/>
+<link href="slide-controller.css" rel="stylesheet"/>
 <!-- SlideController CSS -->
 <style>
 /* ====================================
