Refactor code structure for improved readability and maintainability

--- a/lecture/install_python.html
+++ b/lecture/install_python.html
@@ -283,8 +283,7 @@ body.slide-mode {
             </div>
         </div>
         <div class="image-content">
-            <img src="https://placehold.co/600x375/3a3a3a/ffffff?text=python.org+Downloads+Page" alt="파이썬 공식 홈페이지 다운로드 화면" class="step-image">
-            <p class="text-center text-sm text-gray-500 mt-3">python.org 홈페이지의 다운로드 버튼 강조 이미지</p>
+            <img src="imgs/python1.png" alt="파이썬 공식 홈페이지 다운로드 화면" class="step-image">
         </div>
     </div>
     <div class="absolute bottom-6 right-10 flex items-center text-gray-500 text-sm"><i class="fab fa-python mr-2 text-python-blue text-lg"></i><span>Python 설치 | 1 / 4</span></div>
@@ -306,8 +305,8 @@ body.slide-mode {
             </div>
         </div>
         <div class="image-content">
-            <img src="https://placehold.co/600x375/3a3a3a/ffffff?text=Python+Installer+with+PATH+option" alt="파이썬 설치 프로그램의 PATH 설정 옵션 강조 화면" class="step-image">
-            <p class="text-center text-sm text-gray-500 mt-3">'Add python.exe to PATH' 체크박스를 강조한 이미지</p>
+            <img src="imgs/python2.png" alt="파이썬 설치 프로그램의 PATH 설정 옵션 강조 화면" class="step-image">
+            
         </div>
     </div>
     <div class="absolute bottom-6 right-10 flex items-center text-gray-500 text-sm"><i class="fab fa-python mr-2 text-python-blue text-lg"></i><span>Python 설치 | 2 / 4</span></div>
@@ -324,12 +323,12 @@ body.slide-mode {
             <h2 class="text-2xl font-semibold mb-4"><span class="python-yellow">3단계:</span> 설치 진행 및 완료</h2>
             <p class="text-base text-gray-300 leading-relaxed">'Install Now'를 클릭하면 설치가 자동으로 진행됩니다. 컴퓨터 사양에 따라 몇 분 정도 소요될 수 있습니다.<br><br>설치가 끝나면 <span class="font-semibold text-green-400">'Setup was successful'</span> 이라는 메시지가 나타납니다. 'Close' 버튼을 눌러 설치 프로그램을 닫습니다.</p>
             <div class="tip-box">
-                <h4 class="text-base font-bold text-yellow-400 mb-2"><i class="fas fa-info-circle mr-2"></i>경로 길이 제한 해제 (선택 사항)</h4>
-                <p class="text-sm text-gray-400">완료 화면에 'Disable path length limit' 버튼이 보일 수 있습니다. 이는 260자 이상의 긴 파일 경로를 사용할 수 있게 하는 설정으로, 클릭해두면 나중에 발생할 수 있는 문제를 예방할 수 있습니다.</p>
+                <h4 class="text-base font-bold text-yellow-400 mb-2"><i class="fas fa-info-circle mr-2"></i>환경 변수 설정 (선택 사항)</h4>
+                <p class="text-sm text-gray-400">시작버튼 - '환경 변수' - 시스템변수 -> 'Path'더블클릭 - 환경 변수에 C:#python3.{version}와 C:#python3.{version\Scripts} 가 있다면 올바르게 설치 된 것입니다.</p>
             </div>
         </div>
         <div class="image-content">
-            <img src="https://placehold.co/600x375/3a3a3a/ffffff?text=Setup+was+successful" alt="파이썬 설치 성공 화면" class="step-image">
+            <img src="imgs/python3.png" alt="파이썬 설치 성공 화면" class="step-image">
             <p class="text-center text-sm text-gray-500 mt-3">설치 성공(Setup was successful) 메시지 화면</p>
         </div>
     </div>
@@ -352,7 +351,7 @@ body.slide-mode {
             </div>
         </div>
         <div class="image-content">
-            <img src="https://placehold.co/600x375/3a3a3a/ffffff?text=Terminal+Verification+Commands" alt="터미널에서 python과 pip 버전 확인 명령어 실행 결과" class="step-image">
+            <img src="imgs/python4.png" alt="터미널에서 python과 pip 버전 확인 명령어 실행 결과" class="step-image">
             <p class="text-center text-sm text-gray-500 mt-3">터미널에 버전 확인 명령어를 입력하고 결과가 출력된 화면</p>
         </div>
     </div>
@@ -382,8 +381,8 @@ body.slide-mode {
                     <ul class="text-left text-gray-300 space-y-2">
                         <li>• IDE 설치 (VS Code, PyCharm)</li>
                         <li>• 첫 번째 Python 프로그램 작성</li>
-                        <li>• 패키지 관리자 pip 활용</li>
                         <li>• 가상환경 설정 (Miniconda)</li>
+                        <li>• 패키지 관리자 pip 활용</li>
                     </ul>
                 </div>
                 
@@ -392,7 +391,7 @@ body.slide-mode {
                         <i class="fas fa-book mr-2"></i>추천 학습 자료
                     </h3>
                     <ul class="text-left text-gray-300 space-y-2">
-                        <li>• Python 공식 튜토리얼</li>
+                        <li>• Python 공식 튜토리얼, Document</li>
                         <li>• 온라인 코딩 강의</li>
                         <li>• 실습 프로젝트</li>
                         <li>• 개발자 커뮤니티 참여</li>
