--- a/lecture/yolo.html
+++ b/lecture/yolo.html
@@ -28,6 +28,22 @@
 </head>
 <body>
 
+<!-- Title Slide: YOLO 강의 제목 -->
+<section id="slide0" class="slide-container">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; text-align: center;">
+        <div style="margin-bottom: 3rem;">
+            <h1 style="font-size: 4rem; font-weight: bold; margin-bottom: 1rem; background: linear-gradient(45deg, #00A3E0, #FFD700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">YOLO</h1>
+            <h2 style="font-size: 2.5rem; font-weight: 300; color: #d1d5db; margin-bottom: 2rem;">실시간 객체 탐지</h2>
+            <div style="width: 200px; height: 4px; background: linear-gradient(45deg, #00A3E0, #FFD700); margin: 0 auto; border-radius: 2px;"></div>
+        </div>
+        <div style="margin-top: 2rem;">
+            <p style="font-size: 1.25rem; color: #9ca3af; margin-bottom: 1rem;">You Only Look Once</p>
+            <p style="font-size: 1rem; color: #6b7280;">딥러닝 기반 객체 탐지 모델 활용법</p>
+        </div>
+        
+    </div>
+</section>
+
 <!-- Slide 1: YOLO 소개 및 설치 -->
 <section id="slide1" class="slide-container">
     <div style="position: absolute; top: 40px; left: 40px;">
