--- a/lecture/pyhton.html
+++ b/lecture/pyhton.html
@@ -83,6 +83,24 @@
     <a href="#slide22">22. 파일 시스템 탐색</a>
 </div>
 
+<!-- Title Slide: Python 강의 제목 -->
+<section id="slide0" class="slide-container active">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; text-align: center;">
+        <div style="margin-bottom: 3rem;">
+            <h1 style="font-size: 4rem; font-weight: bold; margin-bottom: 1rem; background: linear-gradient(45deg, #306998, #FFD43B); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Python</h1>
+            <h2 style="font-size: 2.5rem; font-weight: 300; color: #d1d5db; margin-bottom: 2rem;">기초 문법</h2>
+            <div style="width: 200px; height: 4px; background: linear-gradient(45deg, #306998, #FFD43B); margin: 0 auto; border-radius: 2px;"></div>
+        </div>
+        <div style="margin-top: 2rem;">
+            <p style="font-size: 1.25rem; color: #9ca3af; margin-bottom: 1rem;">변수, 조건문, 반복문, 함수, 클래스</p>
+            <p style="font-size: 1rem; color: #6b7280;">파이썬 프로그래밍 기초부터 완전정복</p>
+        </div>
+        <div style="position: absolute; bottom: 3rem; left: 50%; transform: translateX(-50%); color: #6b7280; font-size: 0.875rem;">
+            <p>Space 키 또는 방향키로 슬라이드를 넘겨주세요</p>
+        </div>
+    </div>
+</section>
+
 <!-- Slide 1: 변수 선언과 자료형 -->
 <section id="slide1" class="slide-container">
     <div class="absolute top-10 left-10">
