--- a/lecture/opencv.html
+++ b/lecture/opencv.html
@@ -24,6 +24,7 @@
         .code-string { color: #ce9178; }
         .code-number { color: #b5cea8; }
         .code-function { color: #DCDCAA; }
+        
 </style>
 </head>
 <body>
@@ -56,6 +57,9 @@
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">1.</span> OpenCV 라이브러리란?</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">OpenCV(Open Source Computer Vision Library)는 실시간 컴퓨터 비전에 중점을 둔 프로그래밍 라이브러리입니다. 이미지 처리, 동영상 처리, 웹캠 실시간 처리 등 다양한 컴퓨터 비전 작업을 쉽게 구현할 수 있습니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">처음엔 터미널에서 pip 설치만 확인하고, 간단한 import와 버전 출력으로 환경이 정상인지 빠르게 점검하세요.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">좌표계는 좌상단이 (0,0)이며 색상은 (B,G,R) 순서입니다. thickness=-1로 채우기, putText로 제목을 추가해보세요.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">Canny는 그레이스케일+가우시안 블러 전처리 후 임계값을 1:2~1:3 비율로 조절하며 결과를 비교해 보세요.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">📥 라이브러리 설치</h4>
                 <p style="font-size: 0.875rem; color: #9ca3af;">OpenCV는 `pip`를 사용하여 간단히 설치할 수 있습니다. NumPy 라이브러리에 의존하므로 함께 설치되며, 이미지를 NumPy 배열로 처리합니다.</p>
@@ -92,6 +96,7 @@ pip install opencv-python
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">2.</span> 이미지 읽고 화면에 표시하기</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">OpenCV의 가장 기본적인 기능입니다. `cv2.imread()`로 이미지를 NumPy 배열로 읽어오고, `cv2.imshow()`로 화면에 표시합니다. 이것이 모든 이미지 처리의 시작점입니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">imshow 후에는 반드시 waitKey와 destroyAllWindows를 호출해야 창이 보입니다. 이미지 경로가 틀리면 imread가 None을 반환합니다.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">⌨️ 필수 함수들</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
@@ -139,6 +144,7 @@ image = cv2.imread(image_path)
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">3.</span> 이미지 저장 및 색상 공간 변환</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">이미지를 다른 색상 공간으로 변환하고 파일로 저장하는 방법입니다. 그레이스케일 변환이 가장 기본적이며, 많은 이미지 처리 작업의 전처리 단계입니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">OpenCV의 색상 순서는 BGR입니다. 그레이스케일은 용량을 줄이고 에지/임계값 처리에 유리하니 자주 활용해보세요.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🎨 색상 변환</h4>
                 <p style="font-size: 0.875rem; color: #9ca3af;">OpenCV는 BGR 순서로 색상을 저장합니다. `cv2.COLOR_BGR2GRAY`는 컬러 이미지를 흑백으로 변환하는 가장 일반적인 변환입니다.</p>
@@ -182,6 +188,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">4.</span> 동영상 파일 재생하기</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">비디오는 연속된 이미지(프레임)의 집합입니다. `VideoCapture`로 비디오를 열고, `while` 루프에서 프레임을 하나씩 읽어와 표시하면 동영상이 재생됩니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">VideoCapture가 안 열리면 경로/코덱을 확인하고, 루프에서 ret이 False면 파일 끝 또는 오류입니다. 'q'키로 중단을 구현하세요.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">⏱️ 재생 속도 조절</h4>
                 <p style="font-size: 0.875rem; color: #9ca3af;">`waitKey(25)`는 25밀리초 대기하므로 약 40fps로 재생됩니다. 숫자를 줄이면 빨라지고, 늘리면 느려집니다. 'q' 키로 재생을 중단할 수 있습니다.</p>
@@ -233,6 +240,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">5.</span> 웹캠 실시간 처리하기</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">웹캠은 실시간 비디오 스트림을 제공합니다. VideoCapture(0)에서 0은 기본 웹캠을 의미합니다. 비디오 파일 처리와 동일한 방법으로 실시간 영상을 처리할 수 있습니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">웹캠은 장치 번호(보통 0)로 엽니다. OS에선 카메라 권한을 허용해야 하며, 프레임 읽기 실패 시 즉시 루프를 빠져나오세요.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">📹 실시간 처리 활용</h4>
                 <p style="font-size: 0.875rem; color: #9ca3af;">웹캠의 각 프레임에 필터를 적용하거나, 얼굴 인식, 모션 디텍션 등 다양한 실시간 컴퓨터 비전 기법을 적용할 수 있습니다.</p>
@@ -293,7 +301,7 @@ cv2.destroyAllWindows()
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🎨 도형 그리기 함수들</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
-                    <li> 모든 좌표는 좌상단 (0, 0)에서 시작합니다.</li>
+                    <li> 모든 좌표는 좌상단 
                 </ul>
             </div>
         </div>
@@ -346,6 +354,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">7.</span> 이미지에 텍스트 추가하기</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">`cv2.putText()` 함수로 이미지에 다양한 텍스트를 그릴 수 있습니다. 객체 라벨링, 정보 표시, 디버깅 정보 출력 등에 광범위하게 사용됩니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">폰트/크기/색/두께 조합으로 가독성을 맞추세요. 작은 글자는 Line_AA로 가장자리를 부드럽게 하면 더 선명합니다.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">✍️ 텍스트 옵션</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
@@ -412,6 +421,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">8.</span> 이미지 크기 조절 및 회전</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">이미지 크기를 조절하고 회전, 반전시키는 기본적인 변환 작업들입니다. 데이터 증강(Data Augmentation)이나 이미지 전처리에서 자주 사용됩니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">축소엔 INTER_AREA, 확대엔 INTER_LINEAR/INTER_CUBIC가 무난합니다. 회전 시 중심과 출력 크기를 꼭 확인하세요.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🔄 주요 변환 함수</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
@@ -478,6 +488,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">9.</span> 이미지 필터와 블러 효과</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">다양한 블러 필터를 적용하여 노이즈를 줄이거나 특수 효과를 만들 수 있습니다. 각 필터는 서로 다른 특성을 가지고 있어 목적에 따라 선택해야 합니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">커널 크기는 홀수(3,5,7...)를 사용합니다. 미디언은 소금·후추 노이즈에 강하고, 양방향은 테두리를 잘 보존합니다.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🔍 필터 종류별 특징</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
@@ -608,6 +619,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">11.</span> 마우스 이벤트 처리</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">OpenCV는 마우스 이벤트를 감지하여 사용자와 상호작용할 수 있습니다. 그림판, 이미지 어노테이션, 관심 영역(ROI) 선택 등에 활용할 수 있습니다.</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">마우스 콜백으로 좌표를 받아 도형/영역을 그릴 수 있습니다. 드래그 상태 플래그를 두면 동작이 안정적입니다.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🖱️ 마우스 이벤트 종류</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
@@ -686,6 +698,7 @@ cv2.destroyAllWindows()
         <div class="text-content">
             <h2 style="font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;"><span class="python-yellow">12.</span> 고급 필터 및 마무리</h2>
             <p style="font-size: 1rem; color: #d1d5db; line-height: 1.6;">커스텀 커널을 사용한 컨볼루션 필터와 형태학적 연산을 통해 더욱 전문적인 이미지 처리를 할 수 있습니다. 이것으로 OpenCV 기초를 마무리합니다!</p>
+            <p style="margin-top: 10px; font-size: 0.95rem; color: #e5e7eb;">filter2D의 커널을 바꿔 다양한 효과를 실험해 보세요. 침식/팽창 등 형태학 연산은 마스크 전처리에 특히 유용합니다.</p>
             <div class="tip-box">
                 <h4 style="font-size: 1rem; font-weight: bold; color: #fbbf24; margin-bottom: 8px;">🚀 더 배워볼 주제들</h4>
                 <ul style="font-size: 0.875rem; color: #9ca3af; list-style-type: disc; padding-left: 20px;">
