Add initial implementation of Korean text rendering and various example scripts
- Introduced KoreanTextRenderer class for rendering Korean text on OpenCV images.
- Added multiple example scripts for gesture recognition, face mesh, pose detection, and object detection.
- Created HTML and CSS files for instructional materials related to OpenCV and YOLO.
- Included basic structure for future development in gesture recognition and webcam applications.

--- a/lecture/pyhton.html
+++ b/lecture/pyhton.html
@@ -101,6 +101,47 @@
     </div>
 </section>
 
+<!-- Slide 23: 파이썬 코드 색상으로 변수/함수/클래스 구분하기 -->
+<section id="slide23" class="slide-container">
+    <div class="absolute top-10 left-10">
+        <h1 class="text-3xl font-bold mb-2"><span class="python-blue">Python 초보자 팁</span> - <span class="python-yellow">코드 색상으로 구분하기</span></h1>
+        <div class="w-20 h-1 bg-python-blue rounded"></div>
+    </div>
+    <div class="content-wrapper">
+        <div class="text-content">
+            <h2 class="text-2xl font-semibold mb-4"><span class="python-yellow">마지막 팁!</span> 색상만 봐도 파이썬 코드가 읽힌다</h2>
+            <ul class="text-base text-gray-300 leading-relaxed list-disc pl-5 mb-4">
+                <li><span class="code-keyword">파란색</span> <b>(키워드)</b>: <span class="code-keyword">def</span>, <span class="code-keyword">class</span>, <span class="code-keyword">if</span>, <span class="code-keyword">for</span> 등 파이썬 문법</li>
+                <li><span class="code-function">노란색</span> <b>(함수)</b>: <span class="code-function">print</span>, <span class="code-function">len</span>, <span class="code-function">open</span> 등 함수 이름</li>
+                <li><span class="code-string">주황색</span> <b>(문자열)</b>: <span class="code-string">"문자열"</span>, <span class="code-string">'텍스트'</span></li>
+                <li><span class="code-number">연두색</span> <b>(숫자)</b>: <span class="code-number">123</span>, <span class="code-number">3.14</span></li>
+                <li><span style="color:#FFD43B;">밝은 노랑</span> <b>(클래스)</b>: <span class="python-yellow">MyClass</span> (직접 만든 클래스명, 예시)</li>
+                <li><span style="color:#ffffff;">흰색</span> <b>(변수)</b>: 일반 변수, 인스턴스명 등</li>
+                <li><span class="code-comment">초록색</span> <b>(주석)</b>: <span class="code-comment"># 설명, 메모</span></li>
+            </ul>
+            <div class="tip-box">
+                <b>실전 팁:</b> 코드를 볼 때 색상만 봐도 <b>함수/변수/클래스/문법</b>을 빠르게 구분할 수 있습니다.<br>
+                <span class="code-comment"># 예시 코드</span>
+            </div>
+        </div>
+        <div class="code-content">
+<pre>
+<span class="code-keyword">class</span> <span class="python-yellow">Person</span>:
+    <span class="code-keyword">def</span> <span class="code-function">__init__</span>(self, name, age):
+        self.name = name  <span class="code-comment"># 변수(흰색)</span>
+        self.age = age
+
+    <span class="code-keyword">def</span> <span class="code-function">greet</span>(self):
+        <span class="code-function">print</span>(<span class="code-string">f"안녕하세요, 제 이름은 {self.name}입니다."</span>)
+
+<span class="code-keyword">p</span> = <span class="python-yellow">Person</span>(<span class="code-string">"홍길동"</span>, <span class="code-number">20</span>)
+<span class="code-function">print</span>(p.name)
+</pre>
+        </div>
+    </div>
+    <div class="absolute bottom-6 right-10 flex items-center text-gray-500 text-sm"><i class="fab fa-python mr-2 text-python-blue text-lg"></i><span>Python 기초 | 마지막 팁</span></div>
+</section>
+
 <!-- Slide 1: 변수 선언과 자료형 -->
 <section id="slide1" class="slide-container">
     <div class="absolute top-10 left-10">
